{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 135,
  "lineage": "dc89c51c-72c2-6ffc-b11d-4b4368976487",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:587601535321:internet-gateway/igw-00dffbf09da98d01d",
            "id": "igw-00dffbf09da98d01d",
            "owner_id": "587601535321",
            "tags": {
              "Name": "multicloud-devops-dev-igw"
            },
            "tags_all": {
              "Assessment": "DCE04.2-Assessment1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "multicloud-devops-dev-igw",
              "Project": "multicloud-devops"
            },
            "vpc_id": "vpc-0051b3bf31acfe29d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "service_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:loadbalancer/app/multicloud-devops-dev-alb-a/0b2e15716aecd04a",
            "arn_suffix": "app/multicloud-devops-dev-alb-a/0b2e15716aecd04a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "multicloud-devops-dev-alb-a-1170719732.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:loadbalancer/app/multicloud-devops-dev-alb-a/0b2e15716aecd04a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "multicloud-devops-dev-alb-a",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ac4a85b23dca4afb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02f48ffc540d2e299"
              },
              {
                "subnet_id": "subnet-04044d1108d4ba1a4"
              }
            ],
            "subnets": [
              "subnet-02f48ffc540d2e299",
              "subnet-04044d1108d4ba1a4"
            ],
            "tags": {
              "Name": "multicloud-devops-dev-alb-a"
            },
            "tags_all": {
              "Assessment": "DCE04.2-Assessment1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "multicloud-devops-dev-alb-a",
              "Project": "multicloud-devops"
            },
            "vpc_id": "vpc-0051b3bf31acfe29d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "service_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:loadbalancer/app/multicloud-devops-dev-alb-b/06613edbc5691ca9",
            "arn_suffix": "app/multicloud-devops-dev-alb-b/06613edbc5691ca9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "multicloud-devops-dev-alb-b-177230446.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:loadbalancer/app/multicloud-devops-dev-alb-b/06613edbc5691ca9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "multicloud-devops-dev-alb-b",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ac4a85b23dca4afb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02f48ffc540d2e299"
              },
              {
                "subnet_id": "subnet-04044d1108d4ba1a4"
              }
            ],
            "subnets": [
              "subnet-02f48ffc540d2e299",
              "subnet-04044d1108d4ba1a4"
            ],
            "tags": {
              "Name": "multicloud-devops-dev-alb-b"
            },
            "tags_all": {
              "Assessment": "DCE04.2-Assessment1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "multicloud-devops-dev-alb-b",
              "Project": "multicloud-devops"
            },
            "vpc_id": "vpc-0051b3bf31acfe29d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "service_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:listener/app/multicloud-devops-dev-alb-a/0b2e15716aecd04a/fa24909ba5ed94fa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:targetgroup/multicloud-devops-dev-tg-a/f54c0f737cf6abc2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:listener/app/multicloud-devops-dev-alb-a/0b2e15716aecd04a/fa24909ba5ed94fa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:loadbalancer/app/multicloud-devops-dev-alb-a/0b2e15716aecd04a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Assessment": "DCE04.2-Assessment1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "multicloud-devops"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.service_a",
            "aws_lb_target_group.service_a",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "service_a_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:listener/app/multicloud-devops-dev-alb-a/0b2e15716aecd04a/60c570ee8d6634b3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:targetgroup/multicloud-devops-dev-tg-a-green/c07ac0274e8eca01",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:listener/app/multicloud-devops-dev-alb-a/0b2e15716aecd04a/60c570ee8d6634b3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:loadbalancer/app/multicloud-devops-dev-alb-a/0b2e15716aecd04a",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Assessment": "DCE04.2-Assessment1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "multicloud-devops"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.service_a",
            "aws_lb_target_group.service_a_green",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "service_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:listener/app/multicloud-devops-dev-alb-b/06613edbc5691ca9/07719c1ccfaf8767",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:targetgroup/multicloud-devops-dev-tg-b/06f5f79d220b8255",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:listener/app/multicloud-devops-dev-alb-b/06613edbc5691ca9/07719c1ccfaf8767",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:loadbalancer/app/multicloud-devops-dev-alb-b/06613edbc5691ca9",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Assessment": "DCE04.2-Assessment1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "multicloud-devops"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.service_b",
            "aws_lb_target_group.service_b",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "service_b_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:listener/app/multicloud-devops-dev-alb-b/06613edbc5691ca9/05dd5b815b76a69e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:targetgroup/multicloud-devops-dev-tg-b-green/c3905879bbdfdc89",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:listener/app/multicloud-devops-dev-alb-b/06613edbc5691ca9/05dd5b815b76a69e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:loadbalancer/app/multicloud-devops-dev-alb-b/06613edbc5691ca9",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Assessment": "DCE04.2-Assessment1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "multicloud-devops"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.service_b",
            "aws_lb_target_group.service_b_green",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "service_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:targetgroup/multicloud-devops-dev-tg-a/f54c0f737cf6abc2",
            "arn_suffix": "targetgroup/multicloud-devops-dev-tg-a/f54c0f737cf6abc2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:targetgroup/multicloud-devops-dev-tg-a/f54c0f737cf6abc2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:loadbalancer/app/multicloud-devops-dev-alb-a/0b2e15716aecd04a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "multicloud-devops-dev-tg-a",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "multicloud-devops-dev-tg-a"
            },
            "tags_all": {
              "Assessment": "DCE04.2-Assessment1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "multicloud-devops-dev-tg-a",
              "Project": "multicloud-devops"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0051b3bf31acfe29d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "service_a_green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:targetgroup/multicloud-devops-dev-tg-a-green/c07ac0274e8eca01",
            "arn_suffix": "targetgroup/multicloud-devops-dev-tg-a-green/c07ac0274e8eca01",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:targetgroup/multicloud-devops-dev-tg-a-green/c07ac0274e8eca01",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:loadbalancer/app/multicloud-devops-dev-alb-a/0b2e15716aecd04a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "multicloud-devops-dev-tg-a-green",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "multicloud-devops-dev-tg-a-green"
            },
            "tags_all": {
              "Assessment": "DCE04.2-Assessment1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "multicloud-devops-dev-tg-a-green",
              "Project": "multicloud-devops"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0051b3bf31acfe29d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "service_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:targetgroup/multicloud-devops-dev-tg-b/06f5f79d220b8255",
            "arn_suffix": "targetgroup/multicloud-devops-dev-tg-b/06f5f79d220b8255",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:targetgroup/multicloud-devops-dev-tg-b/06f5f79d220b8255",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:loadbalancer/app/multicloud-devops-dev-alb-b/06613edbc5691ca9"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "multicloud-devops-dev-tg-b",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "multicloud-devops-dev-tg-b"
            },
            "tags_all": {
              "Assessment": "DCE04.2-Assessment1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "multicloud-devops-dev-tg-b",
              "Project": "multicloud-devops"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0051b3bf31acfe29d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "service_b_green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:targetgroup/multicloud-devops-dev-tg-b-green/c3905879bbdfdc89",
            "arn_suffix": "targetgroup/multicloud-devops-dev-tg-b-green/c3905879bbdfdc89",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:targetgroup/multicloud-devops-dev-tg-b-green/c3905879bbdfdc89",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:587601535321:loadbalancer/app/multicloud-devops-dev-alb-b/06613edbc5691ca9"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "multicloud-devops-dev-tg-b-green",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "multicloud-devops-dev-tg-b-green"
            },
            "tags_all": {
              "Assessment": "DCE04.2-Assessment1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "multicloud-devops-dev-tg-b-green",
              "Project": "multicloud-devops"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0051b3bf31acfe29d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:587601535321:route-table/rtb-01265908318f24be7",
            "id": "rtb-01265908318f24be7",
            "owner_id": "587601535321",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00dffbf09da98d01d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "multicloud-devops-dev-public-rt"
            },
            "tags_all": {
              "Assessment": "DCE04.2-Assessment1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "multicloud-devops-dev-public-rt",
              "Project": "multicloud-devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0051b3bf31acfe29d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0298682933f76247f",
            "route_table_id": "rtb-01265908318f24be7",
            "subnet_id": "subnet-04044d1108d4ba1a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6617a14684779be",
            "route_table_id": "rtb-01265908318f24be7",
            "subnet_id": "subnet-02f48ffc540d2e299"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:587601535321:security-group/sg-0ac4a85b23dca4afb",
            "description": "Allow inbound HTTP traffic to ALBs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac4a85b23dca4afb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Test listener for blue/green deployments",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "multicloud-devops-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "587601535321",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "multicloud-devops-dev-alb-sg"
            },
            "tags_all": {
              "Assessment": "DCE04.2-Assessment1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "multicloud-devops-dev-alb-sg",
              "Project": "multicloud-devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0051b3bf31acfe29d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:587601535321:security-group/sg-05f108336834096d0",
            "description": "Allow traffic from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound (DynamoDB, GCS, ECR, etc.)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f108336834096d0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Service A traffic from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ac4a85b23dca4afb"
                ],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [],
                "description": "Service B traffic from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ac4a85b23dca4afb"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "multicloud-devops-dev-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "587601535321",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "multicloud-devops-dev-ecs-tasks-sg"
            },
            "tags_all": {
              "Assessment": "DCE04.2-Assessment1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "multicloud-devops-dev-ecs-tasks-sg",
              "Project": "multicloud-devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0051b3bf31acfe29d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:587601535321:subnet/subnet-04044d1108d4ba1a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04044d1108d4ba1a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "587601535321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "multicloud-devops-dev-public-ap-southeast-2a"
            },
            "tags_all": {
              "Assessment": "DCE04.2-Assessment1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "multicloud-devops-dev-public-ap-southeast-2a",
              "Project": "multicloud-devops"
            },
            "vpc_id": "vpc-0051b3bf31acfe29d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:587601535321:subnet/subnet-02f48ffc540d2e299",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f48ffc540d2e299",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "587601535321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "multicloud-devops-dev-public-ap-southeast-2b"
            },
            "tags_all": {
              "Assessment": "DCE04.2-Assessment1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "multicloud-devops-dev-public-ap-southeast-2b",
              "Project": "multicloud-devops"
            },
            "vpc_id": "vpc-0051b3bf31acfe29d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:587601535321:vpc/vpc-0051b3bf31acfe29d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f2e149a1dafaf6b0",
            "default_route_table_id": "rtb-0f7b4d4b4dfb51db9",
            "default_security_group_id": "sg-078c580c3e2556f89",
            "dhcp_options_id": "dopt-03fb70fee99f8d433",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0051b3bf31acfe29d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f7b4d4b4dfb51db9",
            "owner_id": "587601535321",
            "tags": {
              "Name": "multicloud-devops-dev-vpc"
            },
            "tags_all": {
              "Assessment": "DCE04.2-Assessment1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "multicloud-devops-dev-vpc",
              "Project": "multicloud-devops"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_all_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:587601535321:security-group-rule/sgr-04c767f1a18b78e55",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-04c767f1a18b78e55",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ac4a85b23dca4afb",
            "security_group_rule_id": "sgr-04c767f1a18b78e55",
            "tags": null,
            "tags_all": {
              "Assessment": "DCE04.2-Assessment1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "multicloud-devops"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ecs_all_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:587601535321:security-group-rule/sgr-08baa60f1f29ec2fe",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound (DynamoDB, GCS, ECR, etc.)",
            "from_port": null,
            "id": "sgr-08baa60f1f29ec2fe",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05f108336834096d0",
            "security_group_rule_id": "sgr-08baa60f1f29ec2fe",
            "tags": null,
            "tags_all": {
              "Assessment": "DCE04.2-Assessment1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "multicloud-devops"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:587601535321:security-group-rule/sgr-0e238eea8907390c9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP from anywhere",
            "from_port": 80,
            "id": "sgr-0e238eea8907390c9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ac4a85b23dca4afb",
            "security_group_rule_id": "sgr-0e238eea8907390c9",
            "tags": null,
            "tags_all": {
              "Assessment": "DCE04.2-Assessment1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "multicloud-devops"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:587601535321:security-group-rule/sgr-095a973d6dba53ff5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTPS from anywhere",
            "from_port": 443,
            "id": "sgr-095a973d6dba53ff5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ac4a85b23dca4afb",
            "security_group_rule_id": "sgr-095a973d6dba53ff5",
            "tags": null,
            "tags_all": {
              "Assessment": "DCE04.2-Assessment1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "multicloud-devops"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:587601535321:security-group-rule/sgr-02394cbbfd6528aa2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Test listener for blue/green deployments",
            "from_port": 8080,
            "id": "sgr-02394cbbfd6528aa2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ac4a85b23dca4afb",
            "security_group_rule_id": "sgr-02394cbbfd6528aa2",
            "tags": null,
            "tags_all": {
              "Assessment": "DCE04.2-Assessment1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "multicloud-devops"
            },
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ecs_from_alb_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:587601535321:security-group-rule/sgr-03c493285105cce53",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Service A traffic from ALB",
            "from_port": 8000,
            "id": "sgr-03c493285105cce53",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0ac4a85b23dca4afb",
            "security_group_id": "sg-05f108336834096d0",
            "security_group_rule_id": "sgr-03c493285105cce53",
            "tags": null,
            "tags_all": {
              "Assessment": "DCE04.2-Assessment1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "multicloud-devops"
            },
            "to_port": 8000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ecs_from_alb_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:587601535321:security-group-rule/sgr-0fce16d0dafdc742c",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Service B traffic from ALB",
            "from_port": 3000,
            "id": "sgr-0fce16d0dafdc742c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0ac4a85b23dca4afb",
            "security_group_id": "sg-05f108336834096d0",
            "security_group_rule_id": "sgr-0fce16d0dafdc742c",
            "tags": null,
            "tags_all": {
              "Assessment": "DCE04.2-Assessment1",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "multicloud-devops"
            },
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}